--- a/package.json
+++ b/package.json
@@ -57,7 +57,8 @@
     "redux-thunk": "^2.2.0",
     "sequelize": "^4.3.1",
     "socket.io": "^2.0.3",
-    "styled-components": "^3.3.3"
+    "styled-components": "^3.3.3",
+    "xml-js": "^1.6.7"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.40",
